# cvsemi2024

./: .gitignore  README.md  data.json  prefectures.json  pyproject.toml  requirements.txt
src/: app.py  crawling.py  lib.py  main.py
